# ariadne

./: .eslintrc.cjs  .gitignore  AGENT_TRACING_GUIDE.md  CLAUDE.md  COMPACT.md  LICENSE  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml
.github/: copilot-instructions.md
api/: .env.example  package.json  tsconfig.json
api/src/: config.ts  index.ts
api/src/middleware/: errorHandler.ts  sizeLimit.ts  truncate.ts
api/src/routes/: events.ts  health.ts  ingest.ts
api/src/store/: eventStore.ts  ringBuffer.ts  sseManager.ts
examples/compaction/: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  config.example.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
examples/compaction/compact/: __init__.py  cli.py  config.py  hooks.py  manager.py  policy.py  protocols.py  summarizer.py  types.py
examples/compaction/compact/adapters/: __init__.py  fs.py
examples/compaction/compact/estimators/: __init__.py  noop.py  tiktoken.py
examples/compaction/compact/exporters/: __init__.py  ariadne.py  console.py
examples/compaction/examples/: __init__.py  minimal.py
examples/compaction/tests/: __init__.py  conftest.py  test_estimators.py  test_policy.py  test_types.py
examples/python-openai-agents/: .env.example  ARCHITECTURE.md  README.md  http_exporter.py  pyproject.toml  requirements.txt  weather_agent.py
openspec/: project.md
openspec/changes/add-compaction-extension/: design.md  proposal.md  tasks.md
openspec/changes/add-compaction-extension/specs/compaction/: spec.md
web/: .env.example  components.json  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
web/src/: App.tsx  config.ts  index.css  main.tsx  vite-env.d.ts
web/src/components/: AgentTraceTree.tsx  EventIcons.tsx  FilterControls.tsx  ThemeToggle.tsx  TraceInspector.tsx  TraceTimeline.tsx  theme-provider.tsx
web/src/hooks/: usePrivacyStore.ts  useStreamControl.ts
web/src/types/: index.ts
web/src/utils/: privacy.ts  traceTree.ts
